# pyspark-streaming-base

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
docs/: overview.md
src/pyspark_streaming_base/app/: __init__.py  app.py  streaming_app.py
src/pyspark_streaming_base/sinks/: __init__.py
src/pyspark_streaming_base/sources/: kafka.py
tests/: test_delta_end_to_end.py  test_delta_streaming_sink.py  test_delta_streaming_source.py  test_kafka_stream_source.py  test_streaming_app.py
