[project]
name = "pyspark-streaming-base"
version = "0.1.0"
description = "This project provides a set of base classes that simplify the art of crafting bullet-proof Spark Structured Streaming applications."
readme = "README.md"
authors = [
    { name = "Scott Haines", email = "newfrontcreative@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "delta-spark>=4.0.0",
    "pyspark>=4.0.1",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
